[tool.poetry]
name = "harmonic-mkdocs-test"
version = "0.1.0"
description = "Harmonic theme test for MkDocs"
authors = ["Glen Anderson <glen.anderson@analog.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-harmonic = { file = "../dist/mkdocs_harmonic-0.6.0-py3-none-any.whl" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
